--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
     "@auth0/nextjs-auth0": "^4.3.0",
+    "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "^2.49.4",
     "framer-motion": "^12.6.0",
     "next": "15.2.3",
