--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/nextjs-auth0": "^4.3.0",
     "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.6.0",
     "next": "15.2.3",
     "razorpay": "^2.9.6",
