--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "^2.49.4",
     "@vercel/speed-insights": "^1.2.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.6.0",
     "next": "15.2.3",
     "razorpay": "^2.9.6",
