--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.6.0",
-    "next": "15.2.3",
+    "next": "^15.3.3",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
